--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -237,6 +237,7 @@ Trac641a.rb
 Trac645.rb
 Trac649.rb
 Trac652.rb
+Trac653.rb
 testMarshal.rb   # after other coverage of Hash
 # PopularApplications loads webrick, etc
 PopularApplications.rb
