--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -238,6 +238,8 @@ Trac645.rb
 Trac649.rb
 Trac652.rb
 Trac653.rb
+Trac654.rb
+Trac655.rb
 testMarshal.rb   # after other coverage of Hash
 # PopularApplications loads webrick, etc
 PopularApplications.rb
