--- a/src/experimental/yaml/Rakefile
+++ b/src/experimental/yaml/Rakefile
@@ -9,17 +9,20 @@ FFI_DIR  = "#{ENV['HOME']}/external/ffi"
 I_DIR = "#{YAML_DIR}/include"
 L_DIR = "#{YAML_DIR}/src/.libs"
 X_DIR = "#{ENV['HOME']}/GemStone/checkouts/git/src/experimental/yaml/c"
+SH_L_VALUE = "#{L_DIR}:#{X_DIR}"
 
 UNAME = `uname`.chomp
 case UNAME
 when "Linux"
   CFLAGS   = "-m64 -Wall -g -I#{I_DIR} -fPIC"
   DL_EXT   = 'so'
-  SH_L_PATH = "LD_LIBRARY_PATH=#{L_DIR}:#{X_DIR}"
+  L_PATH_NAME = "LD_LIBRARY_PATH"
+  SH_L_PATH = "LD_LIBRARY_PATH=#{SH_L_VALUE}"
 when "Darwin"
   CFLAGS  = "-m64 -Wall -g -I#{I_DIR}"
   DL_EXT   = 'dylib'
-  SH_L_PATH = "DYLD_LIBRARY_PATH=#{L_DIR}:#{X_DIR}"
+  L_PATH_NAME = "DYLD_LIBRARY_PATH"
+  SH_L_PATH = "DYLD_LIBRARY_PATH=#{SH_L_VALUE}"
 else
   raise "Rakefile doesn't support #{`uname`}"
 end
@@ -43,6 +46,9 @@ task :run => ['lib/libpsych.rb', "parser:#{LIBPSYCH}"] do
   sh "export #{SH_L_PATH} ; maglev-ruby -d -Ilib main.rb"
 end
 
+task :env do
+  ENV[L_PATH_NAME]=SH_L_VALUE
+end
 namespace :parser do
   task "#{LIBPSYCH}" => ['c/parser.o'] do
     opts = "-L#{L_DIR} -lyaml"
@@ -71,8 +77,13 @@ namespace :test do
     sh "export #{SH_L_PATH} ; maglev-ruby -Ilib test_emitter.rb"
   end
 
-  desc "Test the parser code from ruby"
-  task :parser do
+  desc "Test YAML through the Psych front door"
+  task :psych => [:libpsych, :env] do
+    sh 'echo DYLD_LIBRARY_PATH is: $DYLD_LIBRARY_PATH'
+    sh "maglev-ruby -Ilib test_parser.rb"
+  end
+  desc "Test the parser code from rubyXXX"
+  task :parserx do
     sh "export #{SH_L_PATH} ; maglev-ruby -Ilib test_parser.rb"
   end
 end
