more test coverage to go with fix of Trac 656

--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -240,6 +240,7 @@ Trac652.rb
 Trac653.rb
 Trac654.rb
 Trac655.rb
+Trac656.rb
 testMarshal.rb   # after other coverage of Hash
 # PopularApplications loads webrick, etc
 PopularApplications.rb
