enable Trac657 test

--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -241,6 +241,7 @@ Trac653.rb
 Trac654.rb
 Trac655.rb
 Trac656.rb
+Trac657.rb
 testMarshal.rb   # after other coverage of Hash
 # PopularApplications loads webrick, etc
 PopularApplications.rb
