--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -102,6 +102,7 @@ RubyCompilerTest.rb
 SystemTest.rb
 syntaxErrorsTest.rb
 GprofTest.rb
+TestUnit_Test.rb
 # IdentitySetIndexingTest.rb
 # Regression tests for fixed bugs
 Trac86.rb
