--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -102,7 +102,6 @@ RubyCompilerTest.rb
 SystemTest.rb
 syntaxErrorsTest.rb
 GprofTest.rb
-TestUnit_Test.rb
 # IdentitySetIndexingTest.rb
 # Regression tests for fixed bugs
 Trac86.rb
@@ -243,6 +242,9 @@ Trac654.rb
 Trac655.rb
 Trac656.rb
 Trac657.rb
+Trac659.rb
+Trac660.rb
+TestUnit_Test.rb # near end 
 testMarshal.rb   # after other coverage of Hash
 # PopularApplications loads webrick, etc
 PopularApplications.rb
