--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -221,6 +221,7 @@ Trac592.rb
 Trac592a.rb
 Trac607.rb
 Trac609.rb
+Trac610.rb
 Trac611.rb
 Trac612.rb
 Trac613.rb
@@ -244,6 +245,7 @@ Trac656.rb
 Trac657.rb
 Trac659.rb
 Trac660.rb
+Trac664.rb
 TestUnit_Test.rb # near end 
 testMarshal.rb   # after other coverage of Hash
 # PopularApplications loads webrick, etc
