coverage of RubyFlipFlop runtime support

--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -247,6 +247,7 @@ Trac657.rb
 Trac659.rb
 Trac660.rb
 Trac664.rb
+Trac665.rb
 TestUnit_Test.rb # near end
 testMarshal.rb   # after other coverage of Hash
 # PopularApplications loads webrick, etc
