Indexing is now working again, so turn on the examples.

--- a/examples/persistence/indexing/Rakefile
+++ b/examples/persistence/indexing/Rakefile
@@ -2,6 +2,5 @@ task :default => :index
 
 desc "Demo of using unordered collections with indexes."
 task :index do
-  puts "The unordered_collection.rb file is broken pending changes to VM"
-  #sh "maglev-ruby unordered_collection.rb"
+  sh "maglev-ruby unordered_collection.rb"
 end
