Move names to lib and add tests.

--- a/examples/persistence/indexing/Rakefile
+++ b/examples/persistence/indexing/Rakefile
@@ -4,3 +4,8 @@ desc "Demo of using unordered collections with indexes."
 task :index do
   sh "maglev-ruby unordered_collection.rb"
 end
+
+desc "Run the tests"
+task :test do
+  sh %{ maglev-ruby -Ilib test/names_test.rb }
+end
