Updated index example.

--- a/examples/persistence/indexing/Rakefile
+++ b/examples/persistence/indexing/Rakefile
@@ -1,13 +1,13 @@
-require 'rake/testtask'
 
-task :default => :index
+task :default => :demo
 
 desc "Demo of using unordered collections with indexes."
-task :index do
-  sh "maglev-ruby unordered_collection.rb"
+task :demo do
+  sh %{ maglev-ruby -Ilib index_example.rb }
 end
 
-Rake::TestTask.new do |t|
-  t.test_files = FileList['test/*_test.rb']
+desc "Run the tests"
+task :test do
+  sh %{ $MAGLEV_HOME/bin/testrb -Ilib #{FileList['test/*_test.rb']} }
 end
 
