Turn on indexing tests and update Changes.

--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -103,7 +103,7 @@ SystemTest.rb
 syntaxErrorsTest.rb
 GprofTest.rb
 RubyUtilsTest.rb
-# IdentitySetIndexingTest.rb
+IdentitySetIndexingTest.rb
 # Regression tests for fixed bugs
 Trac86.rb
 Trac218.rb
