Added Psych tests to vumunit

--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -105,6 +105,7 @@ GprofTest.rb
 RubyUtilsTest.rb
 IdentitySetIndexingTest.rb
 Ruby_1_8_7_tests.rb
+PsychTests.rb
 # Regression tests for fixed bugs
 Trac86.rb
 Trac218.rb
