fix a file name to work on Linux

--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -104,7 +104,7 @@ syntaxErrorsTest.rb
 GprofTest.rb
 RubyUtilsTest.rb
 IdentitySetIndexingTest.rb
-Ruby_1_8_7_tests.rb
+Ruby_1_8_7_Tests.rb
 PsychTests.rb
 # Regression tests for fixed bugs
 Trac86.rb
