--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -252,6 +252,7 @@ Trac662.rb
 Trac663.rb
 Trac664.rb
 Trac665.rb
+Trac670.rb
 TestUnit_Test.rb # near end
 testMarshal.rb   # after other coverage of Hash
 # PopularApplications loads webrick, etc
