--- a/examples/persistence/mdb/mdb/Rakefile
+++ b/examples/persistence/mdb/mdb/Rakefile
@@ -54,8 +54,7 @@ end
 namespace :server do
   desc "Start the mdb_server app"
   task :start => :commit do
-#    sh %{ $MAGLEV_HOME/bin/rackup server.ru }
-    sh %{ MAGLEV_OPTS='-d' $MAGLEV_HOME/bin/rackup config.ru }
+    sh %{ MAGLEV_OPTS='-d' $MAGLEV_HOME/bin/rackup --port 4567 --server webrick config.ru }
   end
 
   desc "List the databases in the server"
